# villages

./: .gitignore  CMakeLists.txt  README.md  game
_old/arcade/: arcade.c  hud.c  logic.c  logic.h  pawn.c  tile.c
_old/menu/: menu.c
_old/res/: hand.cur
_old/res/fonts/: arpegius-15.fnt  fraktura.fnt
_tools/dev-amiLogic/: index.php
_tools/dev-villagesTileset/: goblin_proto.bm  index.php
arcade/: arcade.h  hud.h  pawn.h  player.c
data/: pawn.cur  pawns.msk
data/bitmaps/: goblins.bm  grass.bm  pawns.bm  pawnsLarge.bm  splash.bm
data/fonts/: alagard.fnt  mnemonika.fnt
data/palettes/: selur_v1.plt
old_res/cursors/: cursor.gpl
old_res/tiles/: selur_v1.bm
res/: mirmirowo.gpl
res/palettes/: cursor.gpl  global.gpl
src/: config.c  config.h  cursor.c  cursor.h  debug.c  debug.h  fade.c  fade.h  game.c  game.h  global.c  global.h  input.c  input.h  main.c  main.h  makefile  tileset.h  utils.c  utils.h
src/_old/: screen.c  screen.h
src/gamestates/: map.c  map.h
src/gamestates/arcade/: arcade.c  arcade.h  hud.c  hud.h  logic.c  logic.h  pawn.c  pawn.h  player.c  player.h  tile.c  tile.h
src/gamestates/menu/: actions.c  actions.h  controls.h  items.c  items.h  menu.c  menu.h  scrolls.c  scrolls.h
